--- a/TrackNZApp/src/main/res/values/strings.xml
+++ b/TrackNZApp/src/main/res/values/strings.xml
@@ -89,7 +89,10 @@
 
     <!-- Misc. strings -->
     <string name="actionmode_selected">%d selected</string>
-    <string name="help_tracking_codes">Your tracking code begins with two letters (e.g. RF), has 9 numbers in between (e.g. 123456789) and ends with two letters (e.g. NZ).</string>
+    <string name="help_tracking_codes">
+        Your tracking code begins with at two letters (e.g. RF), has 9 numbers in between (e.g. 123456789) and ends with two letters (e.g. NZ).
+        If you\'re adding a CourierPost tracking code, you may have a code different to this format.
+    </string>
 
     <string name="about_message">Made by svbnet, aka Joe Thatcher.</string>
     <string name="about_credits">
@@ -108,6 +111,7 @@
     <string name="package_doesnt_exist">Not yet received</string>
     <string name="package_doesnt_exist_toast">This package has not been received by NZ Post yet. It may not have entered New Zealand yet, or it still needs to be processed.</string>
     <string name="no_tracked_items">No packages here.</string>
+    <string name="no_events">No events yet.</string>
     <string name="instr_add">Press the + button to enter, scan or paste a code to track.</string>
     <string name="error_code_invalid">Invalid code</string>
     <string name="error_code_scanned_invalid"><b>%s</b>: The code scanned is invalid.</string>
