--- a/TrackNZApp/src/main/res/values/strings.xml
+++ b/TrackNZApp/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="message_unknown_error" formatted="false">An unknown error occurred while retrieving package status. (%s: %s)</string>
     <string name="message_package_error_preamble">An error occurred while updating one or more packages:<br/><br/>%s</string>
     <string name="message_getting_package_information">Retrieving package information…</string>
+    <string name="message_delete_all_delivered_packages">Are you sure you want to delete all delivered packages?</string>
     <string name="message_delete_packages">%s<br/><br/>Are you sure you want to delete these packages?</string>
     <string name="message_delete_package">Are you sure you want to delete package %s?</string>
     <string name="message_delete_package_with_label">Are you sure you want to delete package <b>%s</b> (%s)?</string>
