Add debug banner icons Update app_name string

--- a/TrackNZApp/src/main/res/values/strings.xml
+++ b/TrackNZApp/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <!-- app_name is now in Gradle build file. -->
+    <string name="app_name">TrackNZ</string>
 
     <!-- Menu actions -->
     <string name="action_refresh">Refresh</string>
