--- a/TrackNZApp/src/main/res/values/strings.xml
+++ b/TrackNZApp/src/main/res/values/strings.xml
@@ -117,4 +117,7 @@
     <string name="error_code_invalid">Invalid code</string>
     <string name="error_code_scanned_invalid"><b>%s</b>: The code scanned is invalid.</string>
     <string name="preference_light">Blink LED</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
