--- a/TrackNZApp/src/main/res/values/strings.xml
+++ b/TrackNZApp/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">TrackNZ</string>
 
     <!-- Menu actions -->
-    <string name="action_refresh">Refresh</string>
+    <string name="action_refresh">Refresh packages</string>
+    <string name="action_refresh_package">Refresh package</string>
     <string name="action_settings">Settings</string>
     <string name="action_track">Track</string>
     <string name="action_delete">Delete</string>
