--- a/TrackNZApp/src/main/res/values/strings.xml
+++ b/TrackNZApp/src/main/res/values/strings.xml
@@ -3,66 +3,50 @@
 
     <!-- Menu actions -->
     <string name="action_refresh">Refresh packages</string>
-    <string name="action_refresh_package">Refresh package</string>
     <string name="action_settings">Settings</string>
     <string name="action_track">Track</string>
     <string name="action_delete">Delete</string>
     <string name="action_set_label">Set label</string>
     <string name="action_notify">Notify</string>
     <string name="action_copy_code">Copy code</string>
-    <string name="action_sort_most_recent">Sort by most recent</string>
     <string name="action_share">Share</string>
     <string name="action_clear_done">Clear delivered packages</string>
     <string name="action_open_in_browser">Open in browser</string>
     <string name="action_about">About</string>
     <string name="action_share_code">Share code</string>
     <string name="action_share_url">Share URL</string>
-    <string name="action_validated_input">CourierPost code</string>
 
     <!-- Activity and dialog titles -->
     <string name="title_activity_main">Tracked packages</string>
     <string name="title_activity_package_info">View package</string>
     <string name="title_activity_add_code">Add package</string>
     <string name="title_error">Error</string>
-    <string name="title_error_updating_packages">Error updating packages</string>
     <string name="title_delete_packages">Delete packages</string>
     <string name="title_edit_label">Edit label for %s</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="title_preference_about">Help and Support</string>
-    <string name="title_delete_package">Delete package</string>
     <string name="title_zxing_not_installed">Barcode Scanner not installed</string>
     <string name="title_share_code">Share code</string>
-    <string name="title_share_codes">Share codes</string>
     <string name="title_share_url">Share URL</string>
-    <string name="title_events">Events</string>
     <string name="title_nzp_error">NZ Post error</string>
     <string name="title_background_refresh">Notifications</string>
-    <string name="title_preference_general">General</string>
     <string name="title_activity_about">About</string>
 
     <!-- Dialog messages -->
     <string name="message_no_codes_entered">Enter or scan at least one code to track.</string>
     <string name="message_unknown_error" formatted="false">An unknown error occurred while retrieving package status. (%s: %s)</string>
-    <string name="message_package_error_preamble">An error occurred while updating one or more packages:<br /><br />%s</string>
     <string name="message_getting_package_information">Retrieving package information…</string>
     <string name="message_delete_all_delivered_packages">Are you sure you want to delete all delivered packages?</string>
-    <string name="message_delete_packages">%s<br /><br />Are you sure you want to delete these packages?</string>
-    <string name="message_delete_package">Are you sure you want to delete package %s?</string>
-    <string name="message_delete_package_with_label">Are you sure you want to delete package <b>%s</b> (%s)?</string>
     <string name="message_error_no_connection">Cannot connect to the NZ Post server. Please make sure you are connected to the Internet. This could also be an error with the NZ Post website.</string>
     <string name="message_zxing_not_installed">To scan packages, the app Barcode Scanner must be installed.</string>
     <string name="message_zxing_error">An error occurred while acquiring barcode.</string>
-    <string name="message_nzp_api_error">The NZ Post server is currently experiencing difficulties. Please try again soon.</string>
     <string name="message_add_nonexistent_package">The package <b>%s</b> does not currently exist in the NZ Post tracking system. Would you like to add it anyway?</string>
 
     <!-- Dialog button labels -->
     <string name="dialog_button_delete">Delete</string>
-    <string name="dialog_button_dont_delete">Don\'t delete</string>
-    <string name="dialog_button_get_app">Get app</string>
+    <string name="dialog_button_get_app">Get</string>
     <string name="dialog_button_yes_add">Yes, add</string>
     <string name="dialog_button_dont_add">Don\'t add</string>
     <string name="dialog_button_try_again">Try again</string>
-    <string name="dialog_button_sweet">Sweet!</string>
 
     <!-- Button labels and icon descriptions -->
     <string name="hint_enter_a_code">Enter a code</string>
@@ -83,14 +67,10 @@
     <!-- Preferences -->
     <string name="preference_notifications">Enable notifications</string>
     <string name="preference_summary_notifications">Packages are refreshed approximately every 15 minutes in the background. Due to your device and/or NZ Post, some notifications may be delayed.</string>
-    <string name="preference_notification_interval">Refresh interval</string>
-    <string name="preference_use_multiple_insert">Enable bulk add mode</string>
-    <string name="preference_share_delimiter">Multiple code separator</string>
     <string name="preference_vibration">Vibration</string>
     <string name="preference_sound">Sound</string>
 
     <!-- Misc. strings -->
-    <string name="actionmode_selected">%d selected</string>
     <string name="help_tracking_codes">
         Your tracking code begins with at two letters (e.g. RF), has 9 numbers in between (e.g. 123456789) and ends with two letters (e.g. NZ).
         If you\'re adding a CourierPost tracking code, you may have a code different to this format.
@@ -102,11 +82,6 @@
         <a href="https://github.com/google/material-design-icons">Google Material Design Icons released under the CC Attribution 4.0 license.</a>
     </string>
 
-    <string name="interval_fifteen_minutes">15 minutes</string>
-    <string name="interval_half_hour">30 minutes</string>
-    <string name="interval_hour">1 hour</string>
-    <string name="interval_half_day">12 hours</string>
-    <string name="interval_day">1 day</string>
     <string name="notif_text_packages_two" formatted="false">%s and %s have changed status.</string>
     <string name="notif_text_packages_more" formatted="false">%s, %s and %d more have changed status.</string>
     <string name="notif_multiple_title">New package events</string>
@@ -114,11 +89,9 @@
     <string name="package_doesnt_exist_toast">This package has not been received by NZ Post yet. It may not have entered New Zealand yet, or it still needs to be processed.</string>
     <string name="no_tracked_items">No packages here.</string>
     <string name="no_events">No events yet.</string>
-    <string name="instr_add">Press the + button to enter, scan or paste a code to track.</string>
     <string name="error_code_invalid">Invalid code</string>
     <string name="error_code_scanned_invalid"><b>%s</b>: The code scanned is invalid.</string>
     <string name="preference_light">Blink LED</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
